# Bomns-for-Linux

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  bomns.desktop  config.h.in  configure  configure.in  mkinstalldirs
graphics/: Makefile.am  Makefile.in  xcfs.tar.bz2
icons/: Makefile.in
icons/hicolor/: Makefile.am  Makefile.in
icons/hicolor/128x128/: Makefile.in
icons/hicolor/128x128/apps/: Makefile.am  Makefile.in
icons/hicolor/16x16/: Makefile.in
icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
icons/hicolor/256x256/: Makefile.in
icons/hicolor/256x256/apps/: Makefile.am  Makefile.in
icons/hicolor/32x32/: Makefile.in
icons/hicolor/32x32/apps/: Makefile.am  Makefile.in
icons/hicolor/48x48/: Makefile.in
icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
icons/hicolor/64x64/: Makefile.in
icons/hicolor/64x64/apps/: Makefile.am  Makefile.in
launcher/: Makefile.am  Makefile.in  aclocal.m4  bomnslauncher.glade  callbacks.h  configure  configure.in  interface.h  mkinstalldirs  support.h
levels/: Makefile.am  Makefile.in  faceoff.lvl  killyou.lvl  narrow.lvl  test.lvl
m4/: Makefile.in
sounds/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  ai.cpp  ai.h  bomns.cpp  bomns.h  config.cpp  config.h  config.h.in  configfile.cpp  configfile.h  level.cpp  level.h  net.cpp  net.h  player.cpp  player.h
src/editor/: CMakeLists.txt  Makefile.am  Makefile.in  cursor.cpp  cursor.h  editor.cpp  editor.h  hud.cpp  hud.h  level.cpp  level.h  object.cpp  object.h
src/launcher/: CMakeLists.txt  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
src/launcher2/: Makefile.am  Makefile.in  bomnslauncher2.glade  bomnslauncher2.gladep  callbacks.c  callbacks.h  interface.c  main.c  main.h
