SUBDIRS = graphics \
					icons \
					levels \
					m4 \
          sounds \
					src \
					src/editor \
					src/launcher \
					src/launcher2

# installs desktop entry (for menus, &c.)
desktopdir = $(prefix)/share/applications
desktop_DATA = bomns.desktop

EXTRA_DIST = TODO \
						 bomns.desktop

ACLOCAL_AMFLAGS = -I m4
