# Process this file with autoconf to produce a configure script.
AC_INIT(src/bomns.cpp)

# this junk
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

# this junk
AM_INIT_AUTOMAKE(bomns,0.98)
AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)


# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_CXX


# Allow for --disable'ing the launcher
AC_ARG_ENABLE(launcher, [  --disable-launcher  Skip building the GTK+ launcher], build_launcher="$enableval", build_launcher="yes")


# Check for SDL
AM_PATH_SDL(1.2.0,,AC_MSG_ERROR(*** SDL >= 1.2.0 is required))
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"


# Check for SDL_mixer
have_SDLmixer=no
AC_CHECK_LIB(SDL_mixer, Mix_OpenAudio, have_SDLmixer=yes)
if test x$have_SDLmixer != xyes
then
  AC_MSG_ERROR([*** Can't find the SDL_mixer library
Try: http://www.libsdl.org/projects/SDL_mixer/
])
fi


# Check for GTK+ 1.2.x (if the launcher will be built)
if test "x$build_launcher" = xyes; then

  AM_PATH_GTK(1.2.0, [LIBS="$LIBS $GTK_LIBS" CFLAGS="$GTK_CFLAGS $CFLAGS"],
  AC_MSG_WARN(*** Unable to find Gtk+ with a version >= 1.2.0, not building launcher) ; build_launcher=no)
      
fi

# Checks for header files.
#AC_CHECK_HEADERS([libintl.h stdlib.h string.h unistd.h])


# Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST


# Checks for library functions.
#AC_FUNC_STAT


# Set the right ${prefix}
if test "$prefix" = "NONE"
then
  prefix="/usr/local"
fi
AC_DEFINE_UNQUOTED(DATA_PATH, "${prefix}/share/bomns")


# Do substitutions
AM_CONDITIONAL(BUILD_LAUNCHER, test "x$build_launcher" = xyes)


AC_OUTPUT( 
           Makefile \
           src/Makefile \
           src/launcher/Makefile \
           graphics/Makefile \
           sounds/Makefile \
           m4/Makefile \
           levels/Makefile
         )

# Tell 'em what's what
echo
echo "Now type \"make\" to compile Bomns for Linux, then \"make install\""
echo "(as root) to install it.  Then play, dammit!"
echo

