EXTRA_DIST = \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
  players.bmp \
  tux.bmp \
  winscreen.bmp

graphicsdir = $(prefix)/share/bomns/graphics
graphics_DATA = \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
  players.bmp \
  tux.bmp \
  winscreen.bmp
