EXTRA_DIST = \
  editor_cursor.bmp \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
  players.bmp \
  winscreen.bmp

graphicsdir = $(prefix)/share/bomns/graphics
graphics_DATA = \
	editor_cursor.bmp \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
  players.bmp \
  winscreen.bmp
