EXTRA_DIST = \
  bomn32.bmp \
  editor_cursor.bmp \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
	objects-shiny.bmp \
  players.bmp \
  winscreen.bmp \
  netmsgs.bmp

graphicsdir = $(prefix)/share/bomns/graphics
graphics_DATA = \
  bomn32.bmp \
	editor_cursor.bmp \
  editor_hud.bmp \
  font.bmp \
  hud.bmp \
  intro.bmp \
  objects.bmp \
	objects-shiny.bmp \
  players.bmp \
  winscreen.bmp \
  netmsgs.bmp
