EXTRA_DIST = \
  beep.wav \
  begin1.wav \
  begin2.wav \
  begin3.wav \
  begin4.wav \
  begin5.wav \
  begin6.wav \
  explosion.wav \
	hurt.wav \
	invulnerable.wav \
  warp.wav \
  winner.wav

soundsdir = $(prefix)/share/bomns/sounds
sounds_DATA = \
	beep.wav \
  begin1.wav \
  begin2.wav \
  begin3.wav \
  begin4.wav \
  begin5.wav \
  begin6.wav \
  explosion.wav \
	hurt.wav \
	invulnerable.wav \
  warp.wav \
  winner.wav
